Even more padding...fixing logo alignment..in an ad hoc way admittedly.. would refactor if I had more time

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -157,6 +157,7 @@ button:hover {
 
 .navbar {
     position: relative;
+    min-height: 70px;
 }
 .brand {
     position: absolute;
@@ -164,4 +165,9 @@ button:hover {
     
     margin-left: -50px !important;  /* 50% of your logo width */
     display: block;
+}
+
+.container {
+    padding-top: 7px;
+
 }
